// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField Snapshots default snapshot 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c0 input,
.c0 textarea,
.c0 legend,
.c0 label,
.c0 span,
.c0 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c0 input.disabled,
.c0 textarea.disabled,
.c0 legend.disabled,
.c0 label.disabled,
.c0 span.disabled,
.c0 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c0 svg {
  box-sizing: border-box;
}

.c0 input,
.c0 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c0.item--before input {
  padding: 0;
}

.c0 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c0 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c0 .item--before.icon path,
.c0 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c0 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c0 .item--after.icon path,
.c0 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0.state--success svg.icon--success,
.c0.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c0.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c0.has--placeholder label {
  display: none;
}

.c0.has--placeholder legend {
  display: none;
}

.c1 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c1.with-icon-before {
  left: 40px;
}

.c1.interaction--focused,
.c1.interaction--active,
.c1.interaction--completed,
.c1.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c1.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c1.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c1.size--small.interaction--focused,
.c1.size--small.interaction--active,
.c1.size--small.interaction--completed,
.c1.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c1.size--large {
  top: 16px;
}

.c1.size--large.interaction--focused,
.c1.size--large.interaction--active,
.c1.size--large.interaction--completed,
.c1.size--large.completed {
  top: -12px;
  left: 21px;
}

.c1.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c1.size--jumbo.interaction--focused,
.c1.size--jumbo.interaction--active,
.c1.size--jumbo.interaction--completed,
.c1.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c1.state--error {
  color: var(--bds-color-text-red);
}

.c1.hidden-label {
  opacity: 0;
}

.c4 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c4 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c4 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c4.interaction--focused legend,
.c4.interaction--active legend,
.c4.interaction--completed legend,
.c4.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c4.interaction--focused legend span,
.c4.interaction--active legend span,
.c4.interaction--completed legend span,
.c4.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.interaction--focused,
.c4.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c4.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c4.size--medium {
  height: var(--bds-sizes-size-48);
}

.c4.size--medium.interaction--focused legend,
.c4.size--medium.interaction--active legend,
.c4.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c4.size--medium.interaction--focused legend span,
.c4.size--medium.interaction--active legend span,
.c4.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.size--small {
  height: var(--bds-sizes-size-40);
}

.c4.size--small.interaction--focused legend,
.c4.size--small.interaction--active legend,
.c4.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c4.size--small.interaction--focused legend span,
.c4.size--small.interaction--active legend span,
.c4.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.size--large {
  height: var(--bds-sizes-size-56);
}

.c4.size--large.interaction--focused legend,
.c4.size--large.interaction--active legend,
.c4.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c4.size--large.interaction--focused legend span,
.c4.size--large.interaction--active legend span,
.c4.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c4.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c4.size--jumbo.interaction--focused legend,
.c4.size--jumbo.interaction--active legend,
.c4.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c4.size--jumbo.interaction--focused legend span,
.c4.size--jumbo.interaction--active legend span,
.c4.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c2 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c2:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c2.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c2.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c2.state--error svg.icon--before path,
.c2.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c2.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c2 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c2 svg.icon.icon--success path,
.c2 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c2 svg.icon.icon--error path,
.c2 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c2 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c2.size--small {
  height: var(--bds-sizes-size-40);
}

.c2.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c2.size--small input,
.c2.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c2.size--large {
  height: var(--bds-sizes-size-56);
}

.c2.size--large input,
.c2.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c2.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c2.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c2.size--jumbo input,
.c2.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c2 svg.icon--error + .suffix,
.c2 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

.c3 + div:before {
  content: "";
  display: inline-block;
  box-sizing: content-box;
  padding: 1rem 0;
  height: 1.125rem;
  border-top: 1px solid;
  border-bottom: 1px solid;
}

<div
    class="c0 backyard textinput--wrapper shape--rounded size--medium interaction--incomplete"
  >
    <label
      class="c1 input-label size--medium state--default interaction--incomplete"
      for="0"
    />
    <div
      class="c2 form-control shape--rounded size--medium interaction--incomplete"
    >
      <input
        class="textinput type--text c3 textfield incomplete"
        id="0"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="c4 text-input-fieldset size--medium interaction--incomplete"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField Snapshots prop: icon TextField default icon snapshot 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c0 input,
.c0 textarea,
.c0 legend,
.c0 label,
.c0 span,
.c0 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c0 input.disabled,
.c0 textarea.disabled,
.c0 legend.disabled,
.c0 label.disabled,
.c0 span.disabled,
.c0 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c0 svg {
  box-sizing: border-box;
}

.c0 input,
.c0 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c0.item--before input {
  padding: 0;
}

.c0 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c0 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c0 .item--before.icon path,
.c0 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c0 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c0 .item--after.icon path,
.c0 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0.state--success svg.icon--success,
.c0.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c0.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c0.has--placeholder label {
  display: none;
}

.c0.has--placeholder legend {
  display: none;
}

.c1 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c1.with-icon-before {
  left: 40px;
}

.c1.interaction--focused,
.c1.interaction--active,
.c1.interaction--completed,
.c1.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c1.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c1.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c1.size--small.interaction--focused,
.c1.size--small.interaction--active,
.c1.size--small.interaction--completed,
.c1.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c1.size--large {
  top: 16px;
}

.c1.size--large.interaction--focused,
.c1.size--large.interaction--active,
.c1.size--large.interaction--completed,
.c1.size--large.completed {
  top: -12px;
  left: 21px;
}

.c1.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c1.size--jumbo.interaction--focused,
.c1.size--jumbo.interaction--active,
.c1.size--jumbo.interaction--completed,
.c1.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c1.state--error {
  color: var(--bds-color-text-red);
}

.c1.hidden-label {
  opacity: 0;
}

.c4 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c4 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c4 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c4.interaction--focused legend,
.c4.interaction--active legend,
.c4.interaction--completed legend,
.c4.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c4.interaction--focused legend span,
.c4.interaction--active legend span,
.c4.interaction--completed legend span,
.c4.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.interaction--focused,
.c4.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c4.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c4.size--medium {
  height: var(--bds-sizes-size-48);
}

.c4.size--medium.interaction--focused legend,
.c4.size--medium.interaction--active legend,
.c4.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c4.size--medium.interaction--focused legend span,
.c4.size--medium.interaction--active legend span,
.c4.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.size--small {
  height: var(--bds-sizes-size-40);
}

.c4.size--small.interaction--focused legend,
.c4.size--small.interaction--active legend,
.c4.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c4.size--small.interaction--focused legend span,
.c4.size--small.interaction--active legend span,
.c4.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.size--large {
  height: var(--bds-sizes-size-56);
}

.c4.size--large.interaction--focused legend,
.c4.size--large.interaction--active legend,
.c4.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c4.size--large.interaction--focused legend span,
.c4.size--large.interaction--active legend span,
.c4.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c4.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c4.size--jumbo.interaction--focused legend,
.c4.size--jumbo.interaction--active legend,
.c4.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c4.size--jumbo.interaction--focused legend span,
.c4.size--jumbo.interaction--active legend span,
.c4.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c2 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c2:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c2.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c2.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c2.state--error svg.icon--before path,
.c2.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c2.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c2 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c2 svg.icon.icon--success path,
.c2 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c2 svg.icon.icon--error path,
.c2 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c2 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c2.size--small {
  height: var(--bds-sizes-size-40);
}

.c2.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c2.size--small input,
.c2.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c2.size--large {
  height: var(--bds-sizes-size-56);
}

.c2.size--large input,
.c2.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c2.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c2.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c2.size--jumbo input,
.c2.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c2 svg.icon--error + .suffix,
.c2 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

.c3 + div:before {
  content: "";
  display: inline-block;
  box-sizing: content-box;
  padding: 1rem 0;
  height: 1.125rem;
  border-top: 1px solid;
  border-bottom: 1px solid;
}

<div
    class="c0 backyard textinput--wrapper shape--rounded size--medium interaction--incomplete"
  >
    <label
      class="c1 input-label size--medium state--default interaction--incomplete"
      for="0"
    />
    <div
      class="c2 form-control shape--rounded size--medium interaction--incomplete"
    >
      <input
        class="textinput type--text c3 textfield incomplete"
        id="0"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="c4 text-input-fieldset size--medium interaction--incomplete"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField Snapshots prop: icon TextField undefined icon snapshot 1`] = `
<DocumentFragment>
  .c3 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c3:not(.color-override) g,
.c3:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c3:not(.color-override) g[stroke-width],
.c3:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c3:not(.color-override) g[stroke-width] *,
.c3:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c3.start {
  margin-right: var(--bds-sizes-size-8);
}

.c3.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c0 input,
.c0 textarea,
.c0 legend,
.c0 label,
.c0 span,
.c0 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c0 input.disabled,
.c0 textarea.disabled,
.c0 legend.disabled,
.c0 label.disabled,
.c0 span.disabled,
.c0 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c0 svg {
  box-sizing: border-box;
}

.c0 input,
.c0 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c0.item--before input {
  padding: 0;
}

.c0 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c0 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c0 .item--before.icon path,
.c0 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c0 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c0 .item--after.icon path,
.c0 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0.state--success svg.icon--success,
.c0.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c0.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c0.has--placeholder label {
  display: none;
}

.c0.has--placeholder legend {
  display: none;
}

.c1 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c1.with-icon-before {
  left: 40px;
}

.c1.interaction--focused,
.c1.interaction--active,
.c1.interaction--completed,
.c1.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c1.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c1.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c1.size--small.interaction--focused,
.c1.size--small.interaction--active,
.c1.size--small.interaction--completed,
.c1.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c1.size--large {
  top: 16px;
}

.c1.size--large.interaction--focused,
.c1.size--large.interaction--active,
.c1.size--large.interaction--completed,
.c1.size--large.completed {
  top: -12px;
  left: 21px;
}

.c1.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c1.size--jumbo.interaction--focused,
.c1.size--jumbo.interaction--active,
.c1.size--jumbo.interaction--completed,
.c1.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c1.state--error {
  color: var(--bds-color-text-red);
}

.c1.hidden-label {
  opacity: 0;
}

.c5 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c5 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5.interaction--focused legend,
.c5.interaction--active legend,
.c5.interaction--completed legend,
.c5.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c5.interaction--focused legend span,
.c5.interaction--active legend span,
.c5.interaction--completed legend span,
.c5.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.interaction--focused,
.c5.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c5.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c5.size--medium {
  height: var(--bds-sizes-size-48);
}

.c5.size--medium.interaction--focused legend,
.c5.size--medium.interaction--active legend,
.c5.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--medium.interaction--focused legend span,
.c5.size--medium.interaction--active legend span,
.c5.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--small {
  height: var(--bds-sizes-size-40);
}

.c5.size--small.interaction--focused legend,
.c5.size--small.interaction--active legend,
.c5.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c5.size--small.interaction--focused legend span,
.c5.size--small.interaction--active legend span,
.c5.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--large {
  height: var(--bds-sizes-size-56);
}

.c5.size--large.interaction--focused legend,
.c5.size--large.interaction--active legend,
.c5.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--large.interaction--focused legend span,
.c5.size--large.interaction--active legend span,
.c5.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c5.size--jumbo.interaction--focused legend,
.c5.size--jumbo.interaction--active legend,
.c5.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c5.size--jumbo.interaction--focused legend span,
.c5.size--jumbo.interaction--active legend span,
.c5.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c2 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c2:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c2.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c2.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c2.state--error svg.icon--before path,
.c2.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c2.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c2 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c2 svg.icon.icon--success path,
.c2 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c2 svg.icon.icon--error path,
.c2 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c2 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c2.size--small {
  height: var(--bds-sizes-size-40);
}

.c2.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c2.size--small input,
.c2.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c2.size--large {
  height: var(--bds-sizes-size-56);
}

.c2.size--large input,
.c2.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c2.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c2.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c2.size--jumbo input,
.c2.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c2 svg.icon--error + .suffix,
.c2 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

.c4 + div:before {
  content: "";
  display: inline-block;
  box-sizing: content-box;
  padding: 1rem 0;
  height: 1.125rem;
  border-top: 1px solid;
  border-bottom: 1px solid;
}

<div
    class="c0 backyard textinput--wrapper shape--rounded size--medium item--before interaction--incomplete"
  >
    <label
      class="c1 input-label size--medium state--default interaction--incomplete with-icon-before"
      for="0"
    />
    <div
      class="c2 form-control shape--rounded size--medium interaction--incomplete"
    >
      <svg
        aria-hidden="true"
        class="c3 icon icon-home-outlined item--before"
        role="presentation"
        style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M11.375 13.4015c.7295 0 1.1558-.4109 1.1558-1.1352V7.5762l.6627.6062c.1027.1027.2209.1746.3699.1746.2414 0 .4366-.149.4366-.3955 0-.1541-.0616-.2517-.1541-.339L12.0634 5.994V2.9683c0-.226-.149-.3698-.3699-.3698h-.673c-.226 0-.375.1438-.375.3698v1.7363l-2.029-1.8493C8.4365 2.691 8.2208 2.5985 8 2.5985c-.2209 0-.4366.0924-.6164.2568L2.154 7.6224c-.0925.0874-.1541.185-.1541.339 0 .2466.1952.3956.4366.3956.1439 0 .2672-.0719.37-.1746l.6626-.601v4.6849c0 .7243.4264 1.1352 1.1558 1.1352h6.75Zm-4.8596-.827H4.8048c-.3288 0-.5086-.1798-.5086-.5137V6.8262l3.524-3.2106c.0514-.0514.113-.0822.1798-.0822.0668 0 .1284.0257.185.0822l3.5188 3.2106v5.2346c0 .3339-.1798.5137-.5086.5137H9.4795v-3.411c0-.2363-.1541-.3853-.3904-.3853H6.911c-.2363 0-.3956.149-.3956.3853v3.411Z"
          fill-rule="evenodd"
        />
      </svg>
      <input
        class="textinput type--text c4 textfield incomplete"
        id="0"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="c5 text-input-fieldset size--medium interaction--incomplete"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField Snapshots prop: icon TextField undefined icon snapshot 2`] = `
<DocumentFragment>
  .c3 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c3:not(.color-override) g,
.c3:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c3:not(.color-override) g[stroke-width],
.c3:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c3:not(.color-override) g[stroke-width] *,
.c3:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c3.start {
  margin-right: var(--bds-sizes-size-8);
}

.c3.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c0 input,
.c0 textarea,
.c0 legend,
.c0 label,
.c0 span,
.c0 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c0 input.disabled,
.c0 textarea.disabled,
.c0 legend.disabled,
.c0 label.disabled,
.c0 span.disabled,
.c0 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c0 svg {
  box-sizing: border-box;
}

.c0 input,
.c0 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c0.item--before input {
  padding: 0;
}

.c0 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c0 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c0 .item--before.icon path,
.c0 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c0 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c0 .item--after.icon path,
.c0 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0.state--success svg.icon--success,
.c0.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c0.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c0.has--placeholder label {
  display: none;
}

.c0.has--placeholder legend {
  display: none;
}

.c1 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c1.with-icon-before {
  left: 40px;
}

.c1.interaction--focused,
.c1.interaction--active,
.c1.interaction--completed,
.c1.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c1.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c1.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c1.size--small.interaction--focused,
.c1.size--small.interaction--active,
.c1.size--small.interaction--completed,
.c1.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c1.size--large {
  top: 16px;
}

.c1.size--large.interaction--focused,
.c1.size--large.interaction--active,
.c1.size--large.interaction--completed,
.c1.size--large.completed {
  top: -12px;
  left: 21px;
}

.c1.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c1.size--jumbo.interaction--focused,
.c1.size--jumbo.interaction--active,
.c1.size--jumbo.interaction--completed,
.c1.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c1.state--error {
  color: var(--bds-color-text-red);
}

.c1.hidden-label {
  opacity: 0;
}

.c5 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c5 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5.interaction--focused legend,
.c5.interaction--active legend,
.c5.interaction--completed legend,
.c5.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c5.interaction--focused legend span,
.c5.interaction--active legend span,
.c5.interaction--completed legend span,
.c5.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.interaction--focused,
.c5.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c5.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c5.size--medium {
  height: var(--bds-sizes-size-48);
}

.c5.size--medium.interaction--focused legend,
.c5.size--medium.interaction--active legend,
.c5.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--medium.interaction--focused legend span,
.c5.size--medium.interaction--active legend span,
.c5.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--small {
  height: var(--bds-sizes-size-40);
}

.c5.size--small.interaction--focused legend,
.c5.size--small.interaction--active legend,
.c5.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c5.size--small.interaction--focused legend span,
.c5.size--small.interaction--active legend span,
.c5.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--large {
  height: var(--bds-sizes-size-56);
}

.c5.size--large.interaction--focused legend,
.c5.size--large.interaction--active legend,
.c5.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--large.interaction--focused legend span,
.c5.size--large.interaction--active legend span,
.c5.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c5.size--jumbo.interaction--focused legend,
.c5.size--jumbo.interaction--active legend,
.c5.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c5.size--jumbo.interaction--focused legend span,
.c5.size--jumbo.interaction--active legend span,
.c5.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c2 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c2:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c2.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c2.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c2.state--error svg.icon--before path,
.c2.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c2.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c2 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c2 svg.icon.icon--success path,
.c2 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c2 svg.icon.icon--error path,
.c2 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c2 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c2.size--small {
  height: var(--bds-sizes-size-40);
}

.c2.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c2.size--small input,
.c2.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c2.size--large {
  height: var(--bds-sizes-size-56);
}

.c2.size--large input,
.c2.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c2.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c2.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c2.size--jumbo input,
.c2.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c2 svg.icon--error + .suffix,
.c2 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

.c4 + div:before {
  content: "";
  display: inline-block;
  box-sizing: content-box;
  padding: 1rem 0;
  height: 1.125rem;
  border-top: 1px solid;
  border-bottom: 1px solid;
}

<div
    class="c0 backyard textinput--wrapper shape--rounded size--medium item--before interaction--incomplete"
  >
    <label
      class="c1 input-label size--medium state--default interaction--incomplete with-icon-before"
      for="0"
    />
    <div
      class="c2 form-control shape--rounded size--medium interaction--incomplete"
    >
      <svg
        aria-hidden="true"
        class="c3 icon icon-credit-card item--before"
        role="presentation"
        style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
        viewBox="0 0 16 16"
      >
        <path
          clip-rule="evenodd"
          d="M12.8 3.091H3.2c-.666 0-1.194.546-1.194 1.2272L2 11.6818c0 .6812.534 1.2273 1.2 1.2273h9.6c.666 0 1.2-.5461 1.2-1.2273V4.3182c0-.6812-.534-1.2273-1.2-1.2273Zm.3429 8.4376a.5.5 0 0 1-.5.5H3.3571a.5.5 0 0 1-.5-.5V6.7143H13.143v4.8143Zm0-6.5286H2.8571v-.3571a.5.5 0 0 1 .5-.5h9.2858a.5.5 0 0 1 .5.5V5Z"
          fill-rule="evenodd"
        />
      </svg>
      <input
        class="textinput type--text c4 textfield incomplete"
        id="0"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="c5 text-input-fieldset size--medium interaction--incomplete"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField Snapshots prop: info TextField info snapshot 1`] = `
<DocumentFragment>
  .c4 {
  width: var(--style-icon-width);
  height: var(--style-icon-height);
}

.c4:not(.color-override) g,
.c4:not(.color-override) path {
  fill: var(--style-icon-color);
}

.c4:not(.color-override) g[stroke-width],
.c4:not(.color-override) path[stroke-width] {
  stroke: var(--style-icon-color);
  fill: none;
}

.c4:not(.color-override) g[stroke-width] *,
.c4:not(.color-override) path[stroke-width] * {
  fill: none;
}

.c4.start {
  margin-right: var(--bds-sizes-size-8);
}

.c4.end {
  margin-left: var(--bds-sizes-size-8);
}

.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c0 input,
.c0 textarea,
.c0 legend,
.c0 label,
.c0 span,
.c0 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c0 input.disabled,
.c0 textarea.disabled,
.c0 legend.disabled,
.c0 label.disabled,
.c0 span.disabled,
.c0 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c0 svg {
  box-sizing: border-box;
}

.c0 input,
.c0 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c0.item--before input {
  padding: 0;
}

.c0 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c0 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c0 .item--before.icon path,
.c0 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c0 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c0 .item--after.icon path,
.c0 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0.state--success svg.icon--success,
.c0.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c0.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c0.has--placeholder label {
  display: none;
}

.c0.has--placeholder legend {
  display: none;
}

.c1 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c1.with-icon-before {
  left: 40px;
}

.c1.interaction--focused,
.c1.interaction--active,
.c1.interaction--completed,
.c1.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c1.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c1.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c1.size--small.interaction--focused,
.c1.size--small.interaction--active,
.c1.size--small.interaction--completed,
.c1.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c1.size--large {
  top: 16px;
}

.c1.size--large.interaction--focused,
.c1.size--large.interaction--active,
.c1.size--large.interaction--completed,
.c1.size--large.completed {
  top: -12px;
  left: 21px;
}

.c1.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c1.size--jumbo.interaction--focused,
.c1.size--jumbo.interaction--active,
.c1.size--jumbo.interaction--completed,
.c1.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c1.state--error {
  color: var(--bds-color-text-red);
}

.c1.hidden-label {
  opacity: 0;
}

.c5 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c5 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5.interaction--focused legend,
.c5.interaction--active legend,
.c5.interaction--completed legend,
.c5.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c5.interaction--focused legend span,
.c5.interaction--active legend span,
.c5.interaction--completed legend span,
.c5.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.interaction--focused,
.c5.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c5.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c5.size--medium {
  height: var(--bds-sizes-size-48);
}

.c5.size--medium.interaction--focused legend,
.c5.size--medium.interaction--active legend,
.c5.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--medium.interaction--focused legend span,
.c5.size--medium.interaction--active legend span,
.c5.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--small {
  height: var(--bds-sizes-size-40);
}

.c5.size--small.interaction--focused legend,
.c5.size--small.interaction--active legend,
.c5.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c5.size--small.interaction--focused legend span,
.c5.size--small.interaction--active legend span,
.c5.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--large {
  height: var(--bds-sizes-size-56);
}

.c5.size--large.interaction--focused legend,
.c5.size--large.interaction--active legend,
.c5.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--large.interaction--focused legend span,
.c5.size--large.interaction--active legend span,
.c5.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c5.size--jumbo.interaction--focused legend,
.c5.size--jumbo.interaction--active legend,
.c5.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c5.size--jumbo.interaction--focused legend span,
.c5.size--jumbo.interaction--active legend span,
.c5.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c2 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c2:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c2.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c2.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c2.state--error svg.icon--before path,
.c2.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c2.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c2 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c2 svg.icon.icon--success path,
.c2 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c2 svg.icon.icon--error path,
.c2 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c2 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c2.size--small {
  height: var(--bds-sizes-size-40);
}

.c2.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c2.size--small input,
.c2.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c2.size--large {
  height: var(--bds-sizes-size-56);
}

.c2.size--large input,
.c2.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c2.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c2.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c2.size--jumbo input,
.c2.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c2 svg.icon--error + .suffix,
.c2 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

.c3 + div:before {
  content: "";
  display: inline-block;
  box-sizing: content-box;
  padding: 1rem 0;
  height: 1.125rem;
  border-top: 1px solid;
  border-bottom: 1px solid;
}

<div
    class="c0 backyard textinput--wrapper shape--rounded size--medium item--after interaction--incomplete"
  >
    <label
      class="c1 input-label size--medium state--default interaction--incomplete"
      for="0"
    />
    <div
      class="c2 form-control shape--rounded size--medium interaction--incomplete"
    >
      <input
        class="textinput type--text c3 textfield incomplete"
        id="0"
        type="text"
        value=""
      />
      <svg
        class="c4 icon icon-info-outlined item--after"
        role="img"
        style="--style-icon-height: 1rem; --style-icon-width: 1rem; --style-icon-color: hsl(0, 0%, 0%, 1);"
        viewBox="0 0 16 16"
      >
        <title>
          Some info
        </title>
        <path
          clip-rule="evenodd"
          d="M8 14c3.2824 0 6-2.7176 6-6 0-3.2765-2.7235-6-6.0059-6C4.7176 2 2 4.7235 2 8c0 3.2824 2.7235 6 6 6Zm0-1c-2.7765 0-4.9941-2.2235-4.9941-5 0-2.7706 2.2117-5 4.9882-5s5 2.2294 5.0059 5c.0059 2.7765-2.2235 5-5 5Zm-.053-7.0941c.4295 0 .7648-.3412.7648-.7647 0-.4294-.3353-.7706-.7647-.7706-.4236 0-.7648.3412-.7648.7706 0 .4235.3412.7647.7648.7647Zm1.4177 5.3294c.2412 0 .4294-.1706.4294-.4118 0-.2294-.1882-.4117-.4294-.4117h-.7294V7.4177c0-.3177-.1588-.5295-.4588-.5295h-1.106c-.241 0-.4293.1824-.4293.4118 0 .2412.1882.4118.4294.4118H7.7v2.7h-.7294c-.2412 0-.4294.1823-.4294.4117 0 .2412.1882.4118.4294.4118h2.3941Z"
          fill-rule="evenodd"
        />
      </svg>
      <fieldset
        aria-hidden="true"
        class="c5 text-input-fieldset size--medium interaction--incomplete"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField Snapshots themes Search dark theme snapshot 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c0 input,
.c0 textarea,
.c0 legend,
.c0 label,
.c0 span,
.c0 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c0 input.disabled,
.c0 textarea.disabled,
.c0 legend.disabled,
.c0 label.disabled,
.c0 span.disabled,
.c0 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c0 svg {
  box-sizing: border-box;
}

.c0 input,
.c0 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c0.item--before input {
  padding: 0;
}

.c0 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c0 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c0 .item--before.icon path,
.c0 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c0 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c0 .item--after.icon path,
.c0 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0.state--success svg.icon--success,
.c0.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c0.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c0.has--placeholder label {
  display: none;
}

.c0.has--placeholder legend {
  display: none;
}

.c1 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c1.with-icon-before {
  left: 40px;
}

.c1.interaction--focused,
.c1.interaction--active,
.c1.interaction--completed,
.c1.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c1.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c1.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c1.size--small.interaction--focused,
.c1.size--small.interaction--active,
.c1.size--small.interaction--completed,
.c1.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c1.size--large {
  top: 16px;
}

.c1.size--large.interaction--focused,
.c1.size--large.interaction--active,
.c1.size--large.interaction--completed,
.c1.size--large.completed {
  top: -12px;
  left: 21px;
}

.c1.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c1.size--jumbo.interaction--focused,
.c1.size--jumbo.interaction--active,
.c1.size--jumbo.interaction--completed,
.c1.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c1.state--error {
  color: var(--bds-color-text-red);
}

.c1.hidden-label {
  opacity: 0;
}

.c4 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c4 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c4 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c4.interaction--focused legend,
.c4.interaction--active legend,
.c4.interaction--completed legend,
.c4.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c4.interaction--focused legend span,
.c4.interaction--active legend span,
.c4.interaction--completed legend span,
.c4.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.interaction--focused,
.c4.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c4.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c4.size--medium {
  height: var(--bds-sizes-size-48);
}

.c4.size--medium.interaction--focused legend,
.c4.size--medium.interaction--active legend,
.c4.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c4.size--medium.interaction--focused legend span,
.c4.size--medium.interaction--active legend span,
.c4.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.size--small {
  height: var(--bds-sizes-size-40);
}

.c4.size--small.interaction--focused legend,
.c4.size--small.interaction--active legend,
.c4.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c4.size--small.interaction--focused legend span,
.c4.size--small.interaction--active legend span,
.c4.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.size--large {
  height: var(--bds-sizes-size-56);
}

.c4.size--large.interaction--focused legend,
.c4.size--large.interaction--active legend,
.c4.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c4.size--large.interaction--focused legend span,
.c4.size--large.interaction--active legend span,
.c4.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c4.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c4.size--jumbo.interaction--focused legend,
.c4.size--jumbo.interaction--active legend,
.c4.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c4.size--jumbo.interaction--focused legend span,
.c4.size--jumbo.interaction--active legend span,
.c4.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c2 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c2:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c2.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c2.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c2.state--error svg.icon--before path,
.c2.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c2.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c2 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c2 svg.icon.icon--success path,
.c2 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c2 svg.icon.icon--error path,
.c2 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c2 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c2.size--small {
  height: var(--bds-sizes-size-40);
}

.c2.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c2.size--small input,
.c2.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c2.size--large {
  height: var(--bds-sizes-size-56);
}

.c2.size--large input,
.c2.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c2.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c2.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c2.size--jumbo input,
.c2.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c2 svg.icon--error + .suffix,
.c2 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

.c3 + div:before {
  content: "";
  display: inline-block;
  box-sizing: content-box;
  padding: 1rem 0;
  height: 1.125rem;
  border-top: 1px solid;
  border-bottom: 1px solid;
}

<div
    class="c0 backyard textinput--wrapper shape--rounded size--medium interaction--incomplete"
  >
    <label
      class="c1 input-label size--medium state--default interaction--incomplete"
      for="0"
    />
    <div
      class="c2 form-control shape--rounded size--medium interaction--incomplete"
    >
      <input
        class="textinput type--text c3 textfield incomplete"
        id="0"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="c4 text-input-fieldset size--medium interaction--incomplete"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField Snapshots themes Search light theme snapshot 1`] = `
<DocumentFragment>
  .c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c0 input,
.c0 textarea,
.c0 legend,
.c0 label,
.c0 span,
.c0 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c0 input.disabled,
.c0 textarea.disabled,
.c0 legend.disabled,
.c0 label.disabled,
.c0 span.disabled,
.c0 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c0 svg {
  box-sizing: border-box;
}

.c0 input,
.c0 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c0.item--before input {
  padding: 0;
}

.c0 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c0 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c0 .item--before.icon path,
.c0 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c0 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c0 .item--after.icon path,
.c0 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c0.state--success svg.icon--success,
.c0.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c0.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c0.has--placeholder label {
  display: none;
}

.c0.has--placeholder legend {
  display: none;
}

.c1 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c1.with-icon-before {
  left: 40px;
}

.c1.interaction--focused,
.c1.interaction--active,
.c1.interaction--completed,
.c1.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c1.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c1.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c1.size--small.interaction--focused,
.c1.size--small.interaction--active,
.c1.size--small.interaction--completed,
.c1.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c1.size--large {
  top: 16px;
}

.c1.size--large.interaction--focused,
.c1.size--large.interaction--active,
.c1.size--large.interaction--completed,
.c1.size--large.completed {
  top: -12px;
  left: 21px;
}

.c1.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c1.size--jumbo.interaction--focused,
.c1.size--jumbo.interaction--active,
.c1.size--jumbo.interaction--completed,
.c1.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c1.state--error {
  color: var(--bds-color-text-red);
}

.c1.hidden-label {
  opacity: 0;
}

.c4 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c4 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c4 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c4.interaction--focused legend,
.c4.interaction--active legend,
.c4.interaction--completed legend,
.c4.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c4.interaction--focused legend span,
.c4.interaction--active legend span,
.c4.interaction--completed legend span,
.c4.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.interaction--focused,
.c4.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c4.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c4.size--medium {
  height: var(--bds-sizes-size-48);
}

.c4.size--medium.interaction--focused legend,
.c4.size--medium.interaction--active legend,
.c4.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c4.size--medium.interaction--focused legend span,
.c4.size--medium.interaction--active legend span,
.c4.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.size--small {
  height: var(--bds-sizes-size-40);
}

.c4.size--small.interaction--focused legend,
.c4.size--small.interaction--active legend,
.c4.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c4.size--small.interaction--focused legend span,
.c4.size--small.interaction--active legend span,
.c4.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c4.size--large {
  height: var(--bds-sizes-size-56);
}

.c4.size--large.interaction--focused legend,
.c4.size--large.interaction--active legend,
.c4.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c4.size--large.interaction--focused legend span,
.c4.size--large.interaction--active legend span,
.c4.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c4.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c4.size--jumbo.interaction--focused legend,
.c4.size--jumbo.interaction--active legend,
.c4.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c4.size--jumbo.interaction--focused legend span,
.c4.size--jumbo.interaction--active legend span,
.c4.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c2 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c2:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c2.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c2.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c2.state--error svg.icon--before path,
.c2.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c2.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c2 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c2 svg.icon.icon--success path,
.c2 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c2 svg.icon.icon--error path,
.c2 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c2 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c2.size--small {
  height: var(--bds-sizes-size-40);
}

.c2.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c2.size--small input,
.c2.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c2.size--large {
  height: var(--bds-sizes-size-56);
}

.c2.size--large input,
.c2.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c2.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c2.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c2.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c2.size--jumbo input,
.c2.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c2 svg.icon--error + .suffix,
.c2 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

.c3 + div:before {
  content: "";
  display: inline-block;
  box-sizing: content-box;
  padding: 1rem 0;
  height: 1.125rem;
  border-top: 1px solid;
  border-bottom: 1px solid;
}

<div
    class="c0 backyard textinput--wrapper shape--rounded size--medium interaction--incomplete"
  >
    <label
      class="c1 input-label size--medium state--default interaction--incomplete"
      for="0"
    />
    <div
      class="c2 form-control shape--rounded size--medium interaction--incomplete"
    >
      <input
        class="textinput type--text c3 textfield incomplete"
        id="0"
        type="text"
        value=""
      />
      <fieldset
        aria-hidden="true"
        class="c4 text-input-fieldset size--medium interaction--incomplete"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextField Snapshots with helper text 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0.error input {
  border-color: hsl(350,73%,35%,1);
}

.c0.error input:focus + label,
.c0.error input:active + label {
  color: hsl(350,73%,35%,1);
}

.c0.error label {
  color: hsl(350,73%,35%,1);
}

.c0.error .helper-text {
  color: hsl(350,73%,35%,1);
}

.c0.success input {
  border-color: hsl(142,86%,28%,1);
}

.c0.success input:focus + label,
.c0.success input:active + label {
  color: hsl(142,86%,28%,1);
}

.c0.success label {
  color: hsl(142,86%,28%,1);
}

.c0.success .helper-text {
  color: hsl(142,86%,28%,1);
}

.c0.warning input {
  border-color: hsl(350,73%,35%,1);
}

.c0.warning input:focus + label,
.c0.warning input:active + label {
  color: hsl(0,0%,0%,.87);
}

.c0.warning label {
  color: hsl(0,0%,0%,.87);
}

.c0.warning .helper-text {
  color: hsl(0,0%,0%,.87);
}

.c7 {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  color: hsl(0,0%,0%,.87);
  font-size: var(--bds-font-tag-helper-text-mobile-font-size);
  line-height: var(--bds-font-tag-helper-text-mobile-line-height);
}

.c6 {
  margin: 0;
  padding-top: 0.25rem;
}

.c6 .typography {
  color: hsl(0,0%,0%,.60);
}

.c6 .typography .icon path {
  fill: hsl(0,0%,0%,.60);
}

.c6 .icon {
  vertical-align: text-top;
}

.c6 .helper-text-icon {
  margin-right: 0.5rem;
}

.c6.c6.indent .typography {
  padding-left: var(--helper-text-indent);
}

.c6.c6.disabled .typography {
  color: hsl(0,0%,0%,.30);
}

.c6.c6.disabled .typography .icon path {
  fill: hsl(0,0%,0%,.30);
}

.c6.error .typography {
  color: hsl(350,73%,35%,1);
}

.c6.error .typography .icon path {
  fill: hsl(350,73%,35%,1);
}

.c6.success .typography {
  color: hsl(142,86%,28%,1);
}

.c6.success .typography .icon path {
  fill: hsl(142,86%,28%,1);
}

.c6.warning .typography {
  color: hsl(350,73%,35%,1);
}

.c6.warning .typography .icon path {
  fill: hsl(350,73%,35%,1);
}

.c6.info .typography {
  color: hsl(213,84%,45%,1);
}

.c6.info .typography .icon path {
  fill: hsl(213,84%,45%,1);
}

.c1 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  vertical-align: top;
  padding: 0;
  position: relative;
  width: 100%;
}

.c1 input,
.c1 textarea,
.c1 legend,
.c1 label,
.c1 span,
.c1 .suffix {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  background-color: transparent;
}

.c1 input.disabled,
.c1 textarea.disabled,
.c1 legend.disabled,
.c1 label.disabled,
.c1 span.disabled,
.c1 .suffix.disabled {
  color: var(--bds-color-text-disabled);
}

.c1 svg {
  box-sizing: border-box;
}

.c1 input,
.c1 textarea {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 100%;
  padding: 0 var(--bds-sizes-size-16);
  color: var(--bds-color-text-primary);
}

.c1.item--before input {
  padding: 0;
}

.c1 .item--before {
  margin-left: var(--bds-sizes-size-4);
  margin-right: var(--bds-sizes-size-8);
}

.c1 .item--before.icon {
  margin-left: var(--bds-sizes-size-16);
}

.c1 .item--before.icon path,
.c1 .item--before.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1 .item--after {
  margin-right: var(--bds-sizes-size-4);
  margin-left: var(--bds-sizes-size-8);
}

.c1 .item--after.icon {
  margin-right: var(--bds-sizes-size-16);
}

.c1 .item--after.icon path,
.c1 .item--after.icon circle {
  fill: var(--bds-color-icon-tertiary);
}

.c1.state--success svg.icon--success,
.c1.state--error svg.item--after {
  margin-right: var(--bds-sizes-size-16);
}

.c1.state--error svg.item--after path {
  fill: var(--bds-color-icon-red);
}

.c1.has--placeholder label {
  display: none;
}

.c1.has--placeholder legend {
  display: none;
}

.c2 {
  z-index: 1;
  pointer-events: none;
  top: 12px;
  left: 16px;
  position: absolute;
  display: block;
  color: var(--bds-color-text-tertiary);
  padding: 0;
  font-size: var(--bds-sizes-size-16);
  line-height: var(--bds-sizes-size-24);
  font-weight: var(--bds-font-weight-regular);
  -webkit-transition: all 0.15s ease-out;
  transition: all 0.15s ease-out;
}

.c2.with-icon-before {
  left: 40px;
}

.c2.interaction--focused,
.c2.interaction--active,
.c2.interaction--completed,
.c2.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-14);
  color: var(--bds-color-text-interactive);
}

.c2.interaction--completed {
  color: var(--bds-color-text-tertiary);
}

.c2.size--small {
  top: 8px;
  font-size: var(--bds-sizes-size-14);
}

.c2.size--small.interaction--focused,
.c2.size--small.interaction--active,
.c2.size--small.interaction--completed,
.c2.size--small.completed {
  top: -12px;
  left: 18px;
  font-size: var(--bds-sizes-size-12);
}

.c2.size--large {
  top: 16px;
}

.c2.size--large.interaction--focused,
.c2.size--large.interaction--active,
.c2.size--large.interaction--completed,
.c2.size--large.completed {
  top: -12px;
  left: 21px;
}

.c2.size--jumbo {
  font-size: var(--bds-sizes-size-24);
  top: 20px;
}

.c2.size--jumbo.interaction--focused,
.c2.size--jumbo.interaction--active,
.c2.size--jumbo.interaction--completed,
.c2.size--jumbo.completed {
  font-size: var(--bds-sizes-size-20);
  top: -12px;
  left: 21px;
}

.c2.state--error {
  color: var(--bds-color-text-red);
}

.c2.hidden-label {
  opacity: 0;
}

.c5 {
  top: 0px;
  left: 0;
  right: 0;
  bottom: 0;
  margin: 0;
  position: absolute;
  height: var(--bds-sizes-size-48);
  border-style: solid;
  border-width: var(--bds-border-width-sm);
  border-radius: var(--bds-border-radius-lg);
  border-color: var(--bds-color-border-default);
  pointer-events: none;
  box-sizing: border-box;
}

.c5 legend {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  box-sizing: border-box;
  width: auto;
  height: var(--bds-sizes-size-1);
  display: block;
  max-width: 0.01px;
  visibility: hidden;
  font-size: var(--bds-sizes-size-14);
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5 legend span {
  font-family: Roboto,Helvetica,Arial,sans-serif;
  font-weight: var(--bds-font-weight-regular);
}

.c5.interaction--focused legend,
.c5.interaction--active legend,
.c5.interaction--completed legend,
.c5.completed legend {
  max-width: 500px;
  padding: 0 var(--bds-sizes-size-8);
}

.c5.interaction--focused legend span,
.c5.interaction--active legend span,
.c5.interaction--completed legend span,
.c5.completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.interaction--focused,
.c5.interaction--active {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c5.interaction--completed {
  border-color: var(--bds-color-border-default);
}

.c5.size--medium {
  height: var(--bds-sizes-size-48);
}

.c5.size--medium.interaction--focused legend,
.c5.size--medium.interaction--active legend,
.c5.size--medium.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--medium.interaction--focused legend span,
.c5.size--medium.interaction--active legend span,
.c5.size--medium.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--small {
  height: var(--bds-sizes-size-40);
}

.c5.size--small.interaction--focused legend,
.c5.size--small.interaction--active legend,
.c5.size--small.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-12);
  padding: 0 var(--bds-sizes-size-6);
}

.c5.size--small.interaction--focused legend span,
.c5.size--small.interaction--active legend span,
.c5.size--small.interaction--completed legend span {
  font-size: var(--bds-sizes-size-12);
}

.c5.size--large {
  height: var(--bds-sizes-size-56);
}

.c5.size--large.interaction--focused legend,
.c5.size--large.interaction--active legend,
.c5.size--large.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-14);
  padding: 0 var(--bds-sizes-size-8);
}

.c5.size--large.interaction--focused legend span,
.c5.size--large.interaction--active legend span,
.c5.size--large.interaction--completed legend span {
  font-size: var(--bds-sizes-size-14);
}

.c5.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c5.size--jumbo.interaction--focused legend,
.c5.size--jumbo.interaction--active legend,
.c5.size--jumbo.interaction--completed legend {
  max-width: 500px;
  font-size: var(--bds-sizes-size-20);
}

.c5.size--jumbo.interaction--focused legend span,
.c5.size--jumbo.interaction--active legend span,
.c5.size--jumbo.interaction--completed legend span {
  font-size: var(--bds-sizes-size-20);
}

.c3 {
  position: relative;
  height: 48px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3:hover:not(.disabled) fieldset {
  border-color: var(--bds-color-border-interactive);
}

.c3:focus fieldset {
  border-color: var(--bds-color-border-interactive);
  border-width: var(--bds-sizes-size-2);
}

.c3.disabled fieldset {
  border-color: var(--bds-color-border-disabled);
}

.c3.state--error fieldset {
  border-color: var(--bds-color-border-red);
}

.c3.state--error svg.icon--before path,
.c3.state--error svg.icon--before circle {
  fill: var(--bds-color-icon-red);
}

.c3.state--error:focus fieldset {
  border-color: var(--bds-color-border-red);
  border-width: var(--bds-sizes-size-2);
}

.c3 svg.icon {
  height: var(--bds-sizes-size-16);
  width: var(--bds-sizes-size-16);
}

.c3 svg.icon.icon--success path,
.c3 svg.icon.icon--success circle {
  fill: var(--bds-color-icon-green);
}

.c3 svg.icon.icon--error path,
.c3 svg.icon.icon--error circle {
  fill: var(--bds-color-icon-red);
}

.c3 .suffix {
  border-radius: var(--bds-border-radius-lg);
  color: var(--bds-color-text-tertiary);
  height: 100%;
  padding: 0 var(--bds-sizes-size-16);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background: var(--bds-color-surface-subdued);
  font-size: var(--bds-sizes-size-16);
}

.c3.size--small {
  height: var(--bds-sizes-size-40);
}

.c3.size--small svg.icon {
  height: var(--bds-sizes-size-14);
  width: var(--bds-sizes-size-14);
}

.c3.size--small input,
.c3.size--small textarea {
  font-size: var(--bds-sizes-size-14);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--small .suffix {
  font-size: var(--bds-sizes-size-14);
}

.c3.size--large {
  height: var(--bds-sizes-size-56);
}

.c3.size--large input,
.c3.size--large textarea {
  font-size: var(--bds-sizes-size-18);
  line-height: var(--bds-sizes-size-24);
}

.c3.size--jumbo {
  height: var(--bds-sizes-size-64);
}

.c3.size--jumbo svg.icon {
  height: 20px;
  width: 20px;
}

.c3.size--jumbo .suffix {
  font-size: var(--bds-sizes-size-24);
}

.c3.size--jumbo input,
.c3.size--jumbo textarea {
  font-size: var(--bds-sizes-size-20);
  line-height: var(--bds-sizes-size-32);
}

.c3 svg.icon--error + .suffix,
.c3 svg.icon--success + .suffix {
  margin-left: var(--bds-sizes-size-8);
}

.c4 + div:before {
  content: "";
  display: inline-block;
  box-sizing: content-box;
  padding: 1rem 0;
  height: 1.125rem;
  border-top: 1px solid;
  border-bottom: 1px solid;
}

@media only screen and (min-width:66rem) {
  .c7 {
    font-size: var(--bds-font-tag-helper-text-desktop-font-size);
    line-height: var(--bds-font-tag-helper-text-desktop-line-height);
  }
}

<div
    class="c0 form-control"
  >
    <div
      class="c1 backyard textinput--wrapper shape--rounded size--medium interaction--incomplete"
    >
      <label
        class="c2 input-label size--medium state--default interaction--incomplete"
        for="3"
      />
      <div
        class="c3 form-control shape--rounded size--medium interaction--incomplete"
      >
        <input
          class="textinput type--text c4 textfield incomplete"
          id="3"
          type="text"
          value=""
        />
        <fieldset
          aria-hidden="true"
          class="c5 text-input-fieldset size--medium interaction--incomplete"
        />
      </div>
    </div>
    <span
      class="c6 helper-text default indent"
    >
      <span
        class="c7 typography variant--helper align--left"
        color="text_primary"
        style="padding-left: 1rem;"
      >
        Text Field Helper
      </span>
    </span>
  </div>
</DocumentFragment>
`;
